--- a/stage0/stage0.html
+++ b/stage0/stage0.html
@@ -36,7 +36,7 @@
       <form>
         This <em> text </em> is inside a form tag.
       </form>
-      This text is outside the form tag. You can see that the form tag is "block" because it caused the text outside of it to start a new line.
+      This text is outside the form tag. You can see that the form tag is <em>"block"</em> because it caused the text outside of it to start a new line.
     </p>
     <h3>br Tags</h3>
     <br>
@@ -47,13 +47,13 @@
       <span>
         This text is inside of a span tag.
       </span>
-      This text is outside the span tag. You can see that the span tag is "inline" because it did not cause the text outside of it to start a new line.
+      This text is outside the span tag. You can see that the span tag is <em>"inline"</em> because it did not cause the text outside of it to start a new line.
     </p>
     <h3>Div Tags</h3>
     <div>
       This text is inside of a div tag.
     </div>
-    This text is outside of a div tag.  You can see that a div tag is "block" becuase it caused the text outside of it to start a new line.
+    This text is outside of a div tag.  You can see that a div tag is <em>"block"</em> becuase it caused the text outside of it to start a new line.
   </div>
   <h3>Img Tags</h3>
   <p>
