--- a/stage0/stage0.html
+++ b/stage0/stage0.html
@@ -7,14 +7,14 @@
   <h1>HTML Notes</h1>
     <p>
       HTML stands for hypertext markup language, and provides the structure for web pages.
-      <br><em>When coding, you don't have to remember everything!!  If you don't know the answer,
+      <em>When coding, you don't have to remember everything!!  If you don't know the answer,
       <b><a href= "http://www.google.com"> GOOGLE</a></b></em> it!
     </p>
   <h2>HTML Tags and How They Work</h2>
   <p>
     An HTML tag is a piece of HTML code that instructs the content within the tag to do something.
-    <br>An element is some kind of content enclosed within an opening tag and a closing tag. Below
-    <br>you will see the demonstration of multiple tags, and how they appear on the web browser
+    An element is some kind of content enclosed within an opening tag and a closing tag. Below
+    you will see the demonstration of multiple tags, and how they appear on the web browser
   </p>
   <div>
     <h3>P Tags</h3>
