--- a/Project/boxes.html
+++ b/Project/boxes.html
@@ -22,8 +22,8 @@
 	        <p>Boxes is a concept that is very widely used when building webpages.  If you look at a webpage as building blocks on top of one another,
 	        that is literally how it is built.  Take for instance this mock web page:</p>
 	        <div class="sample-page">
-	            <div class="sample-header">
-	              <h4>My Webpage</h4>
+	            <div>
+	              <h2 class="sample-header">My Webpage</h2>
 	            </div>
 	            <div class="hdivs">
 	              <div class="redoutline">
