--- a/Project/tags.html
+++ b/Project/tags.html
@@ -39,21 +39,21 @@
 		  	</div> <!--closing hdivs-->
 
 	        <div id="ptag">
-	        	<div class=header4>
-	          	<h4>&lt;p> Tags</h4>
-	          </div>
-	          <p>
-	            This demonstrates text within the first p tag
-	          </p>
-	          <p>
-	            This demonstrates text within a 2nd p tag.  Notice that the text within this p tag begins a 2nd paragraph
-	          </p>
+	        	<div>
+	          		<h2 class=header2>&lt;p> Tags</h2>
+	          	</div>
+	          	<p>
+	            	This demonstrates text within the first p tag
+	          	</p>
+	          	<p>
+	            	This demonstrates text within a 2nd p tag.  Notice that the text within this p tag begins a 2nd paragraph
+	          	</p>
 	        </div>
 
 	        <div id="strongtag">
-	        	<div class=header4>
-	          	<h4>&lt;strong> Tags</h4>
-	          </div>
+	        	<div>
+	          		<h2 class=header2>&lt;strong> Tags</h2>
+	          	</div>
 	            <strong>
 	              This text is inside a strong tag.  It is basically the same thing as a b tag. Notice that this bold text
 	              is on a separate line because it is outside of the 2nd p tag, and therefore, not part of the paragraph above.
@@ -61,8 +61,8 @@
 	        </div>
 
 	        <div id="formtag">
-	       	  <div class=header4>
-	          	<h4>&lt;form> Tags</h4>
+	       	  <div>
+	          	<h2 class=header2>&lt;form> Tags</h2>
 	          </div>
 	            <form>
 	              This <em> text </em> is inside a form tag.
@@ -72,18 +72,18 @@
 	        </div>
 
 	        <div id="brtag">
-	        	<div class=header4>
-	          	<h4>&lt;br> Tags</h4>
-	          </div>
-	          This is a line of text.
-	          <br>
-	          A br tag causes the text to start a new line, like this one.
-	        </div>
+	        	<div>
+	          		<h2 class=header2>&lt;br> Tags</h2>
+	          	</div>
+	          	This is a line of text.
+	          	<br>
+	          	A br tag causes the text to start a new line, like this one.
+	        	</div>
 
 	        <div id="spantag">
-	        	<div class=header4>
-	          	<h4>&lt;span> Tags</h4>
-	          </div>
+	        	<div>
+	          		<h2 class=header2>&lt;span> Tags</h2>
+	          	</div>
 	            <span class="whiteoutline">
 	              This text is inside of a span tag.
 	            </span>
@@ -92,9 +92,9 @@
 	        </div>
 
 	        <div id="divtag">
-	        	<div class=header4>
-	          	<h4>&lt;div> Tags</h4>
-	          </div>
+	        	<div>
+	          		<h2 class=header2>&lt;div> Tags</h2>
+	          	</div>
 	            <div class="redoutline">
 	              This text is inside of a div tag.
 	            </div>
@@ -103,9 +103,9 @@
 	        </div>
 
 	        <div id="imgtag">
-	        	<div class=header4>
-	          	<h4>&lt;img> Tags</h4>
-	          </div>
+	        	<div>
+	          		<h2 class=header2>&lt;img> Tags</h2>
+	          	</div>
 	          <div class="hdivs">
 	          	<div>
 	          		<img src = "images/david_chalk.jpg" alt = "David playing with sidewalk chalk" id="davidimg">
