--- a/Project/home.html
+++ b/Project/home.html
@@ -7,45 +7,47 @@
 </head>
 <body>
 
-  <ul class="navbar">
-    <li class="title">Learn HTML</li>
-    <li><a href="home.html">Home</a></li>
-    <li><a href="tags.html">Tags</a></li>
-    <li><a href="dom.html">DOM</a></li>
-    <li><a href="styling.html">Styling a Webpage</a></li>
-    <li><a href="resources.html">Developer Resources</a></li>
-    <li><a href="boxes.html">Boxes</a></li>
-  </ul>
+	<div>
+	  	<ul class="navbar">
+	  		<li class="title">Learn HTML</li>
+		    <li><a href="home.html">Home</a></li>
+		    <li><a href="tags.html">Tags</a></li>
+		    <li><a href="dom.html">DOM</a></li>
+		    <li><a href="styling.html">Styling a Webpage</a></li>
+		    <li><a href="resources.html">Developer Resources</a></li>
+		    <li><a href="boxes.html">Boxes</a></li>
+	  	</ul>
+	</div>
 
-  <div class="content">
-    <div id="intro">
-      <div>
-        <img src ="images/dewolf.jpg" alt ="Dave Headshot" id="headshot">
-      </div>
-      <div class="rpic">
-        <p class="extraspace">Hi. My name is Dave.  I am just starting to learn how to code in HTML.  This is my website, which I am using 
-        to document everything that I am learning. </p> 
-        <p> HTML stands for hypertext markup language, and provides the structure for web pages.<em>When coding, you don't 
-        have to remember everything!!  If you don't know the answer,<b><a href= "http://www.google.com"> GOOGLE</a></b></em> it!</p>
-      </div>
-    </div> <!--closing intro-->
+	<div class="content">
+	    <div id="intro">
+	      <div>
+	        <img src ="images/dewolf.jpg" alt ="Dave Headshot" id="headshot">
+	      </div>
+	      <div class="rpic">
+	        <p>Hi. My name is Dave.  I am just starting to learn how to code in HTML.  This is my website, which I am using 
+	        to document everything that I am learning. </p> 
+	        <p> HTML stands for hypertext markup language, and provides the structure for web pages.<em>When coding, you don't 
+	        have to remember everything!!  If you don't know the answer,<b><a href= "http://www.google.com"> GOOGLE</a></b></em> it!</p>
+	      </div>
+	    </div> <!--closing intro-->
 
 
-      <div id="www">
-        <div class="header3">
-          <h3>Components of the Web</h3>
-        </div>
-        <div>
-          The diagram below depicts the basic components of the World Wide Web.  In order to access the internet, you run a browser on your PC.
-          A browser is a program used to access and display files hosted on the internet.  Examples are Google Chrome and Internet Explorer.  The internet,
-          depicted by the cloud, is nothing but a giant network of computers.  Internet files stored on these computers are retrieved via the HTTP
-          protocol, and can then be viewed on your PC browser.  
-        </div>
-        <div class="center">
-          <img src="images/world-wide-web.jpg" alt="World Wide Web Diagram">
-        </div>
-      </div> <!--Closing www-->
-          
-  </div> <!--close content-->
+  		<div id="www">
+	        <div>
+	          <h1 class="header1">Components of the Web</h1>
+	        </div>
+	        <div>
+	          The diagram below depicts the basic components of the World Wide Web.  In order to access the internet, you run a browser on your PC.
+	          A browser is a program used to access and display files hosted on the internet.  Examples are Google Chrome and Internet Explorer.  The internet,
+	          depicted by the cloud, is nothing but a giant network of computers.  Internet files stored on these computers are retrieved via the HTTP
+	          protocol, and can then be viewed on your PC browser.  
+	        </div>
+	        <div class="center">
+	          <img src="images/world-wide-web.jpg" alt="World Wide Web Diagram">
+	        </div>
+      	</div> <!--Closing www--> 
+  	</div> <!--close content-->
+
 </body>
 </html>
