--- a/Project/dom.html
+++ b/Project/dom.html
@@ -7,15 +7,17 @@
 </head>
 <body>
 
-	<ul class="navbar">
-	    <li class="title">DOM</li>
-	    <li><a href="home.html">Home</a></li>
-	    <li><a href="tags.html">Tags</a></li>
-	    <li><a href="dom.html">DOM</a></li>
-	    <li><a href="styling.html">Styling a Webpage</a></li>
-	    <li><a href="resources.html">Developer Resources</a></li>
-	    <li><a href="boxes.html">Boxes</a></li>
-	 </ul>
+  <div>
+  	<ul class="navbar">
+  	    <li class="title">DOM</li>
+  	    <li><a href="home.html">Home</a></li>
+  	    <li><a href="tags.html">Tags</a></li>
+  	    <li><a href="dom.html">DOM</a></li>
+  	    <li><a href="styling.html">Styling a Webpage</a></li>
+  	    <li><a href="resources.html">Developer Resources</a></li>
+  	    <li><a href="boxes.html">Boxes</a></li>
+  	 </ul>
+  </div>
 
 	<div class="content">
 		<div class="extraspace" id="dom">
