--- a/Project/dom.html
+++ b/Project/dom.html
@@ -7,17 +7,26 @@
 </head>
 <body>
 
-  <div>
-  	<ul class="navbar">
-  	    <li class="title">DOM</li>
-  	    <li><a href="home.html">Home</a></li>
-  	    <li><a href="tags.html">Tags</a></li>
-  	    <li><a href="dom.html">DOM</a></li>
-  	    <li><a href="styling.html">Styling a Webpage</a></li>
-  	    <li><a href="resources.html">Developer Resources</a></li>
-  	    <li><a href="boxes.html">Boxes</a></li>
-  	 </ul>
-  </div>
+	<ul class="navbar">
+	    <li class="title">DOM</li>
+	    <li><a href="home.html">Home</a></li>
+	    <li>
+        <a href="tags.html">Tags</a>
+          <ul class="subnav">
+            <li><a href="tags.html#ptag">P Tags</a></li>
+            <li><a href="tags.html#strongtag">Strong Tags</a></li>
+            <li><a href="tags.html#formtag">Form Tags</a></li>
+            <li><a href="tags.html#brtag">br Tags</a></li>
+            <li><a href="tags.html#spantag">Span Tags</a></li>
+            <li><a href="tags.html#divtag">Div Tags</a></li>
+            <li><a href="tags.html#imgtag">Img Tags</a></li>
+          </ul>
+      </li>
+	    <li class="currpage"><a href="dom.html">DOM</a></li>
+	    <li><a href="styling.html">Styling a Webpage</a></li>
+	    <li><a href="resources.html">Developer Resources</a></li>
+	    <li><a href="boxes.html">Boxes</a></li>
+	 </ul>
 
 	<div class="content">
 		<div class="extraspace" id="dom">
